hdl_bnf.txt
chip_description ::=
    "CHIP" chip_name "{"
        "IN" in_or_out_pin_decls
        "OUT" in_or_out_pin_decls
        maybe_builtin_chip_list
        maybe_clocked_pin_list
        "PARTS" ":" parts_list
    "}" .

chip_name ::=    IDENTIFIER .

in_or_out_pin_decls ::=
        in_or_out_pin_decls ("," pin_declaration)* ";"

maybeclocked_pin_list ::=
        ("CLOCKED"   clocked_pin_list)?

clocked_pin_list ::=
        unsubscripted_endpoint ("," unsubscripted_endpoint)* ";"

maybe_builtin_chip_list ::=
        ("BUILTIN"   builtin_chip_list)?

builtin_chip_list ::=
        chip_name ("," chip_name)* ";"

parts_list ::=
        part (";" part)*

part ::=
        chip_name "(" connection_list ")"

connection_list ::=
        connection ("," connection)*

connection ::=
        maybe_subscripted_endpoint "=" maybe_subscripted_endpoint .
               // Which chip (parent or part), internal or source/sink will be
               // determined later by walking the tree

maybe_subscripted_endpoint ::=
        unsubscripted_endpoint ("[" range "]")?

range ::=
        UNSIGNED_INT (".." UNSIGNED_INT)?

pin_declaration ::=
        unsubscripted_endpoint ("[" UNSIGNED_INT "]")? .

unsubscripted_endpoint ::= IDENTIFIER .
